Fixed navigation dots alignment

--- a/themes/scss/widgets/navigation.scss
+++ b/themes/scss/widgets/navigation.scss
@@ -8,6 +8,9 @@
   width: 100%;
   margin-top: $sMargin-element;
 }
+.Widget-navDots {
+  height: 8px;
+}
 .Widget-navDotsItem {
   display: inline-block;
   width: 8px;
@@ -15,6 +18,7 @@
   padding: 0;
   border: none;
   border-radius: 8px;
+  vertical-align: top;
   &:hover {
     cursor: pointer;
   }
